slow/kubernates/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app-d4fb5302-f0ef-4a68-a063-d4d5a6e11777
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app-d4fb5302-f0ef-4a68-a063-d4d5a6e11777
  template:
    metadata:
      labels:
        app: springboot-app-d4fb5302-f0ef-4a68-a063-d4d5a6e11777
    spec:
      containers:
      - name: springboot
        image: ravi8881/3219e62e-f28c-4e9a-b62e-77aae69fb44b-70114ee3-7c51-40a6-af98-bd2ca53150ad-17cd568b-1349-4670-a8ae-53d47334febc-7d9588f5-18bc-42fe-8c24-367054f3da0c-graph:4.0.0
        ports:
        - containerPort: 8081
